[project]
name = "pandas-polars-processing-example"
version = "0.1.0"
description = "Pandas/Polars processing example with often used methods"
authors = [
    {name = "niccari"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.0.0",
    "pandas==2.2.3",
    "polars==1.30.0",
    "numpy>=2.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]